fixed profile pic cropping, added stats + styles

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -57,6 +57,7 @@ $background: #F8F8F8;
 $container-background: white;
 $border-radius: 4px;
 $header-color: #006992;
+$blue: #006992;
 // $header-color: #3C4F76;
 $grey: #2E3532;
 @mixin box-shadow {
@@ -469,11 +470,22 @@ textarea {
 #profile-pic {
     width: 150px;
     height: 150px;
-    border-radius: 50%;
+    position: relative;
     overflow: hidden;
-    box-sizing: border-box;
-    margin: 1rem;
-    border: 4px solid #e5f0f4;
+    border-radius: 50%;
+    border: 4px solid $blue;
+
+    img {
+        display: inline;
+        margin: 0 auto;
+        width: auto;
+    }
+}
+
+#profile-pic-cell {
+    @include breakpoint(small only) {
+        justify-content: center;
+    }
 }
 
 #profile-header {
@@ -495,13 +507,26 @@ textarea {
 #profile-header:before {
     @include box-shadow;
     content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: -1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: -1;
+    @include breakpoint(small only) {
+        border-radius: 0;
+    }
+}
+
+.number-callout {
+    font-family: 'Merriweather', serif;
+    font-size: 1.25rem;
+    color: $blue;
+    font-weight: bold;
+}
+
+.text-callout {
+    font-weight: bold;
 }
 
 // SETTINGS
-
